# UnnamedMinecraftClone

./: .clang-format  .gitmodules  CMakeLists.txt
cmake/: AddAssets.cmake  AddShaders.cmake
docs/: requirements.md  vulkan.md
libs/stb_image/: CMakeLists.txt
src/: Debug.hpp  MainWindow.cpp  MainWindow.hpp  PlayerController.cpp  PlayerController.hpp  Random.cpp  Random.hpp  Utils.hpp  VoxelRaytracer.cpp  VoxelRaytracer.hpp  Window.cpp  Window.hpp  Window2.cpp  main.cpp
src/Render/: Context.cpp  Context.hpp
src/World/: Block.hpp  World.hpp
src/logic/: AIController.cpp  AIController.hpp  Collision.cpp  Collision.hpp  DayNightCycle.cpp  DayNightCycle.hpp  HudManager.cpp  HudManager.hpp  PlayerController.cpp  PlayerController.hpp  VoxelRaytracer.cpp  VoxelRaytracer.hpp
src/render/: BufferManager.cpp  BufferManager.hpp  Constants.hpp  Context.cpp  Context.hpp  ForwardPass.cpp  ForwardPass.hpp  Framebuffer.cpp  Framebuffer.hpp  GeometryRenderer.cpp  GeometryRenderer.hpp  Managed.hpp  Mesh.hpp  Primitives.hpp  Renderer.cpp  Renderer.hpp  ShadowPass.cpp  ShadowPass.hpp  Skybox.cpp  Skybox.hpp  SkyboxRenderer.cpp  SkyboxRenderer.hpp  Swapchain.cpp  Swapchain.hpp  TextureManager.cpp  TextureManager.hpp  UiRenderer.cpp  UiRenderer.hpp  Window.cpp  Window.hpp
src/shaders/: GeometryFrag.frag  GeometryVert.vert  ShadowVert.vert  SimpleFrag.frag  SimpleVert.vert  SkyboxFrag.frag  SkyboxVert.vert  UiFrag.frag  UiVert.vert
src/world/: AnimModel.cpp  AnimModel.hpp  AtlasManager.cpp  AtlasManager.hpp  Block.hpp  Capretta.cpp  Capretta.hpp  Chunk.cpp  Chunk.hpp  Collision.cpp  Collision.hpp  Mucchina.cpp  Mucchina.hpp  World.cpp  World.hpp
